# youtamp

./: .env.example  .gitignore  GEMINI.md  LICENSE  README.md  app.py  config.py  models.py  package-lock.json  package.json  pyproject.toml
.gemini/: settings.json
cli/: manage.py
services/: gemini.py  video_processor.py  youtube.py
static/: app.js  style.css  tailwind.config.js
static/css/: bg.css  input.css
static/js/: api.js  app.js  lang.js  theme.js  timestamps.js  ui.js  utils.js  youtube.js
static/locales/: en.json  th.json
templates/: _hero_input_section.html  _main_dev.html  _timestamp_display.html  index.html
tests/: conftest.py  test_cli.py
utils/: file_io.py  logging_config.py
